--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>
-    </noscript>
-    <div id="root"></div>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>Go React Starter</title>
+    </head>
+    <body class="zeroMargin">
+        <noscript>
+        </noscript>
+        <div id="root" class="zeroMargin"></div>
+    </body>
 </html>
